[package]
version = "0.1.0"
name = "stack-app"
repository = "https://github.com/hth313/stack-app"
authors = ["Håkan Thörngren <hth313@gmail.com>"]
description = "Visualizes the stack in the debugger"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
